--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -33,7 +33,8 @@
   </section>
 
   <section class="content-padding">
-    <h1 class="content-heading">What do I do?</h1>
+    <h1 class="subheading2">What do I do?</h1>
+    <br>
     <div class="two-columns">
       <!-- <div class="col-1"></div> -->
       <div class="col-1">
