--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -5,18 +5,49 @@
   top: 0;
   width: 13rem;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   font-style: var(--font-style);
   height: 100vh;
   box-shadow: 0 0 3px 0px #000;
-  background-color: var(--background-color-secondary);
+  background-color: var(--background-color-tertiary);
+}
+
+.logo-container{
+  height: 12rem;
+  margin-bottom: 3rem;
+}
+
+.nav-logo{
+  font-size: 8rem;
+  text-align: center;
+  color: var(--font-color);
+  text-shadow: 6px 6px var(--primary-color), 8px 8px var(--secondary-color);
+}
+
+
+.nav-logo-tagline{
+  color: var(--font-color);
+  text-align: center;
+  font-size: 2rem;
+}
+
+.social-icons-container{
+  margin-top: 5rem;
+  margin-bottom: 3rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap:1.5rem;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .nav-menu {
   width: 100%;
   padding: 30px;
   margin-bottom: 4rem;
+  align-items: center;
 }
 
 .nav-menu-item {
@@ -57,8 +88,8 @@
     height: max-content;
     z-index: 2;
     padding-top: 6em;
-    background-color: var(--background-color-secondary);
-    opacity: 0.9;
+    background-color: var(--background-color-tertiary);
+    opacity: 1;
     animation: nav-menu 0.4s ease-out 0s 1 forwards;
   }
 
