--- a/src/app/experiences/experience/experience.component.css
+++ b/src/app/experiences/experience/experience.component.css
@@ -41,14 +41,14 @@
     padding: 1rem 0.5rem;
     background-color: transparent;
     text-decoration: none;
-    border: 1px solid var(--primary-color);
+    border: 1px solid var(--secondary-color);
     color: var(--font-color);
     font-size: 1.5rem;
 }
 
 .btn:hover{
-    background-color: var(--hover-level-2);
-    color:var(--font-color);
+    background-color: var(--hover-level-1);
+    border: 1px solid var(--primary-color);
 }
 
 .links-container{
