--- a/src/app/skills-and-achievements/skills-and-achievements.component.html
+++ b/src/app/skills-and-achievements/skills-and-achievements.component.html
@@ -16,7 +16,7 @@
     <div class="skills">
       <div class="skill">
         <img class="bar-col-icon icon-reveal" src="../../assets/android.webp" alt="">
-        <label class="chart-colun-name">Android</label>
+        <label class="chart-column-name">Android</label>
         <div
         class="skill-bar"
         style="height: 65%; background-color: #32de84"
@@ -25,7 +25,7 @@
       
       <div class="skill">
         <img class="bar-col-icon icon-reveal" src="../../assets/nodejs.webp" alt="">
-        <label class="chart-colun-name">NodeJS</label>
+        <label class="chart-column-name">NodeJS</label>
         <div
           class="skill-bar"
           style="height: 51%; background-color: rgb(118, 187, 118)"
@@ -34,7 +34,7 @@
         
         <div class="skill">
         <img class="bar-col-icon icon-reveal" src="../../assets/angular.png" alt="">
-        <label class="chart-colun-name">Angular</label>
+        <label class="chart-column-name">Angular</label>
         <div
         class="skill-bar"
         style="height: 45%; background-color: rgb(212, 80, 80)"
@@ -43,7 +43,7 @@
       
       <div class="skill">
         <img class="bar-col-icon icon-reveal" src="../../assets/firebase.png" alt="">
-        <label class="chart-colun-name">Firebase</label>
+        <label class="chart-column-name">Firebase</label>
         <div
           class="skill-bar"
           style="height: 63%; background-color: orange"
@@ -66,7 +66,7 @@
     <div class="skills">
       <div class="skill">
         <img class="bar-col-icon icon-reveal" src="../../assets/kotlin.webp" alt="">
-        <label class="chart-colun-name">Kotlin/Java</label>
+        <label class="chart-column-name">Kotlin/Java</label>
         <div
         class="skill-bar"
         style="height: 68%; background-color: rgb(226, 121, 35)"
@@ -75,7 +75,7 @@
       
       <div class="skill">
         <img class="bar-col-icon icon-reveal" src="../../assets/python.png" alt="">
-        <label class="chart-colun-name">Python</label>
+        <label class="chart-column-name">Python</label>
         <div
         class="skill-bar"
         style="height: 62%; background-color: rgb(230, 211, 38)"
@@ -84,7 +84,7 @@
       
       <div class="skill">
         <img class="bar-col-icon icon-reveal" src="../../assets/typescript.webp" alt="">
-        <label class="chart-colun-name">Typescript</label>
+        <label class="chart-column-name">Typescript</label>
         <div
         class="skill-bar"
         style="height: 59%; background-color: rgb(54, 121, 197)"
@@ -93,7 +93,7 @@
       
       <div class="skill">
         <img class="bar-col-icon icon-reveal" src="../../assets/c.webp" alt="">
-        <label class="chart-colun-name">C/C++</label>
+        <label class="chart-column-name">C/C++</label>
         <div
           class="skill-bar"
           style="height: 52%; background-color: rgb(82, 72, 212)"
