--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -9,8 +9,8 @@
   align-items: center;
   font-style: var(--font-style);
   height: 100vh;
-  box-shadow: 0 0 3px 0px #000;
-  background-color: var(--background-color-tertiary);
+  box-shadow: 0 0 15px 0px #000;
+  background-color: var(--background-color-dark);
 }
 
 .logo-container{
@@ -88,11 +88,12 @@
     height: max-content;
     z-index: 2;
     padding-top: 6em;
+    box-shadow: 0 0 15px 0px #000;
     background-color: var(--background-color-tertiary);
     opacity: 1;
     animation: nav-menu 0.4s ease-out 0s 1 forwards;
   }
-
+  
   @keyframes nav-menu {
     100%{
       top:0;
