--- a/src/app/projects/project/project.component.css
+++ b/src/app/projects/project/project.component.css
@@ -1,4 +1,4 @@
-.rounded-box{
+/* .rounded-box{
     border-radius: 1rem;
     background-color: var(--background-color-secondary);
     padding: 3rem 1.7rem;
@@ -6,11 +6,21 @@
     min-height: 13rem;
     box-sizing: border-box;
     border: 1px solid var(--border-color);
+} */
+
+.rounded-box{
+    border-radius: 1rem;
+    background-color: var(--background-color-secondary);
+    padding: 3rem 1.7rem;
+    padding-right: 1.2rem;
+    min-height: 13rem;
+    box-sizing: border-box;
+    box-shadow: 0 0 60px 0px #0d0d0d;
 }
 
 .rounded-box:hover{
     background-color: var(--hover-level-0);
-    border: 1px solid var(--primary-color);
+    /* border: 1px solid var(--primary-color); */
     cursor: pointer;
 }
 
