--- a/src/app/skills-and-achievements/skills-and-achievements.component.html
+++ b/src/app/skills-and-achievements/skills-and-achievements.component.html
@@ -110,5 +110,6 @@
     </div>    
   </div>
 
+  <button class="nav-button transition-background" [routerLink]="['/contact']">Contact Me</button>
   <button class="nav-button transition-background" [routerLink]="['/']">Profile</button>
 </div>
