--- a/src/app/contact-me/contact-me.component.html
+++ b/src/app/contact-me/contact-me.component.html
@@ -21,7 +21,7 @@
 
             <textarea name="" id="" cols="30" rows="10" class="input" placeholder="Message" required></textarea>
 
-            <button id="submit" class="button">Send</button>
+            <button id="submit" type="submit" class="button">Send</button>
 
         </form>
     </div>
