--- a/src/app/contact-me/contact-me.component.css
+++ b/src/app/contact-me/contact-me.component.css
@@ -73,5 +73,9 @@ textarea:focus{
         margin-left: auto;
         margin-right: 0;
     }
+
+    .content-container{
+        padding: 0em 1.5rem 5em 1.5em;        
+    }
 }
 
