--- a/src/app/experiences/experiences.component.css
+++ b/src/app/experiences/experiences.component.css
@@ -4,3 +4,9 @@
     padding-top: 0rem;
     padding-bottom: 8rem;
 }
+
+@media screen and (max-width: 900px) {
+    .content-container{
+        padding: 0em 1.5rem 5em 1.5em;        
+    }
+}
