--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -107,6 +107,10 @@
     font-size: 6.3rem;
     line-height: 1.5;
   }
+
+  .content-padding{
+    padding: 4em 1.5em 8em 1.5em;
+  }
 }
 
 @media screen and (max-width: 700px) {
