--- a/src/app/contact-me/contact-me.component.html
+++ b/src/app/contact-me/contact-me.component.html
@@ -1,29 +1,60 @@
 <div class="heading-container">
-    <h1 class="content-heading">Contact Me</h1>
+  <h1 class="content-heading">Contact Me</h1>
 </div>
 <div class="content-container">
-    <div class="form-box">
-        <p class="content">Like my work? Well you can reach me out!</p>
-        <br>
-        <form 
-        name="contact-form"
-        class="contact-form"
-        method="POST"
-        autocomplete="off"
-        data-netlify="true">
+  <div class="form-box">
+    <p class="content">Like my work? Well you can reach me out!</p>
+    <br />
+    <form (ngSubmit)="submitClicked(f)" #f = "ngForm">
+      <input type="hidden" name="form-name" value="contact-form"/>
+      <input
+        id="name"
+        name="name"
+        type="text"
+        [(ngModel)]="contact.name"
+        class="input col"
+        style="margin-right: 2%"
+        placeholder="First Name"
+        required
+        #name = "ngModel"/>
 
-            <input type="hidden" name="form-name" value="contact-form"/>
+      <input
+        id="surname"
+        name="surname"
+        [(ngModel)]="contact.surname"
+        type="text"
+        class="input col"
+        placeholder="Last Name"
+        required
+      />
 
-                <input id="first-name" type="text" class="input col" style="margin-right: 2%;" placeholder="First Name" required>
-                <input id="last-name" type="text" class="input col" placeholder="Last Name" required>
 
-            <input type="email" placeholder="Email" class="input" required>
+      <input
+        type="email"
+        name="email"
+        [(ngModel)]="contact.email"
+        placeholder="Email"
+        class="input"
+        required
+        email
+      />
 
-            <textarea name="" id="" cols="30" rows="10" class="input" placeholder="Message" required></textarea>
 
-            <button id="submit" type="submit" class="button">Send</button>
+      <textarea
+        name="message"
+        id="message"
+        cols="30"
+        [(ngModel)]="contact.message"
+        rows="10"
+        class="input"
+        placeholder="Message"
+        required
+      ></textarea>
+      <button id="submit" type="submit" class="button" [disabled]="!f.valid">Send</button>
 
-        </form>
-    </div>
-    <button class="nav-button transition-background" [routerLink]="['/']">Profile</button>
+    </form>
+  </div>
+  <button class="nav-button transition-background" [routerLink]="['/']">
+    Profile
+  </button>
 </div>
