--- a/src/app/contact-me/contact-me.component.css
+++ b/src/app/contact-me/contact-me.component.css
@@ -30,6 +30,7 @@
     text-align: left;
     color: white;
     border-radius: 1rem;
+    padding: 1rem;
 }
 
 #success-msg{
@@ -42,7 +43,7 @@
 
 
 #loading-msg{
-    background-color: gray;
+    background-color: rgba(128, 128, 128, 0.808);
 }
 
 .input{
