optimizations and added accessibilty specifics added

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,7 +7,7 @@
           src="../../assets/mypic1600.webp"
           srcset="../../assets/mypic375.webp 400w, ../../assets/mypic768.webp 768w, ../../assets/mypic1600.webp 1600w"
           sizes="(max-width:375px) 375px, (max-width:768px) 768px, (max-width:1440px) 1600px, 1600px" 
-          alt="profile image"
+          alt="Image of Abhishek Jagushte"
           class="profile-image"
           />
         </div>
@@ -22,11 +22,11 @@
         </div>
         <br>
         <div class="horizontal-container center-responsive">
-          <a class="link-icon" href="mailto:abhishekjagushte@gmail.com"><img src="../../assets/mail.svg" alt="" class="profile-icon"></a>
-          <a class="link-icon" target="_blank" href="https://drive.google.com/file/d/1ifZ1__nMWhbJyg-ZS53I_wKpCsLsPMAQ/view?usp=sharing"><img src="../../assets/resume.svg" alt="" class="profile-icon"></a>
-          <a class="link-icon" target="_blank" href="https://www.linkedin.com/in/abhishekjagushte/"><img src="../../assets/linkedin.svg" alt="" class="profile-icon"></a>
-          <a class="link-icon" target="_blank" href="https://github.com/abhishekjagushte"><img src="../../assets/github.svg" alt="" class="profile-icon"></a>
-          <a class="link-icon" target="_blank" href="https://www.instagram.com/abhishekjagushte/"><img src="../../assets/instagram.svg" alt="" class="profile-icon"></a>
+          <a class="link-icon" href="mailto:abhishekjagushte@gmail.com"><img src="../../assets/mail.svg" alt="Email me by clicking here" class="profile-icon"></a>
+          <a class="link-icon" target="_blank" href="https://drive.google.com/file/d/1ifZ1__nMWhbJyg-ZS53I_wKpCsLsPMAQ/view?usp=sharing"><img src="../../assets/resume.svg" alt="View my resume by clicking here" class="profile-icon"></a>
+          <a class="link-icon" target="_blank" href="https://www.linkedin.com/in/abhishekjagushte/"><img src="../../assets/linkedin.svg" alt="Visit my linkedin page by clicking here" class="profile-icon"></a>
+          <a class="link-icon" target="_blank" href="https://github.com/abhishekjagushte"><img src="../../assets/github.svg" alt="Check out my github account by clicking here" class="profile-icon"></a>
+          <a class="link-icon" target="_blank" href="https://www.instagram.com/abhishekjagushte/"><img src="../../assets/instagram.svg" alt="Visit my instagram handle by clicking here" class="profile-icon"></a>
         </div>
       </div>
     </div>
