--- a/src/app/experiences/experiences.component.css
+++ b/src/app/experiences/experiences.component.css
@@ -1,6 +1,6 @@
 .content-container{
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
+    padding-left: 10vh;
+    padding-right: 10vh;
     padding-top: 0rem;
     padding-bottom: 8rem;
 }
