--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -1,5 +1,5 @@
 .content-container{
-    padding: 0em 2.5em 8em 2.2em;
+    padding: 0em 10vh 8em 10vh;
 }
 
 @media screen and (max-width: 900px) {
