--- a/src/app/skills-and-achievements/skills-and-achievements.component.css
+++ b/src/app/skills-and-achievements/skills-and-achievements.component.css
@@ -1,5 +1,5 @@
 .content-container {
-  padding: 0em 2.5em 8em 2.5em;
+  padding: 0em 10vh 8em 10vh;
 }
 
 .skills {
@@ -130,6 +130,12 @@
 .icon-container {
   height: 10rem;
   margin-bottom: 2rem;
+}
+
+@media screen and (max-width: 900px) {
+  .content-container{
+      padding: 0em 1.5rem 5em 1.5em;        
+  }
 }
 
 @media screen and (max-width: 768px) {
