--- a/src/app/skills-and-achievements/skills-and-achievements.component.html
+++ b/src/app/skills-and-achievements/skills-and-achievements.component.html
@@ -7,8 +7,8 @@
   
   <h2 class="subheading2">Other Technologies</h2>
   <div class="technologies-grid">
-    <div *ngFor="let icon of techIcons" class="icon-container icon-reveal">
-        <img  src="{{icon.path}}" class="technology-icon" alt="{{icon.name}}">
+    <div *ngFor="let icon of otherTechnologies" class="icon-container icon-reveal">
+        <img  src="{{icon.img}}" class="technology-icon" alt="{{icon.name}}">
         <p class="content" style="text-align: center;">{{ icon.name }}</p>
     </div>    
   </div>
