rearranged menu items so the experiences is before projects

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -52,7 +52,7 @@
     </div>
   </section>
 
-  <button class="nav-button transition-background" [routerLink]="['/projects']">Projects</button>
+  <button class="nav-button transition-background" [routerLink]="['/experiences']">Experience</button>
   <br><br><br><br>
 
 </div>
